# clonify

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: publish.yml  pytest.yml
clonify/: __init__.py  cli.py  clonify.py  clonify_impl.py
src/: lib.rs
tests/: test_cli.py  test_determinism.py  test_error_paths.py  test_file_io.py  test_grouping_and_allelics.py  test_integration.py  test_integration_bnab.py  test_native_optimizations.py
tests/test_data/: test_bnAb_heavies.tsv
