[package]
name = "clonify_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "clonify_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"] }
rayon = "1.10"
bitvec = "1.0"
ahash = "0.8"
itertools = "0.12"
simdutf8 = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"


