[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "clonify"
version = "0.1.0"
description = "High-performance clonify implementation with native average-linkage clustering"
authors = [
  { name = "Bryan Briney" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "polars>=0.20",
  "mnemonic>=0.20",
  "natsort>=8.0",
  "click>=8.1",
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Rust",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
]

[project.scripts]
clonify = "clonify.cli:main"

[project.optional-dependencies]
dev = ["maturin>=1.5,<2.0", "pytest>=7.0", "polars>=0.20", "numpy>=1.23", "mnemonic>=0.20", "natsort>=8.0"]

[tool.maturin]
module-name = "clonify._native"
bindings = "pyo3"
features = ["pyo3/extension-module"]
python-packages = ["clonify"]
strip = true


